--- a/LagoVista.AppLoader/Resources/Colors.xaml
+++ b/LagoVista.AppLoader/Resources/Colors.xaml
@@ -1,7 +1,8 @@
-﻿<ResourceDictionary 
-    xmlns="http://xamarin.com/schemas/2014/forms"
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" >
-  
+﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:ctl="clr-namespace:LagoVista.AppLoader.Controls"
+                    xmlns:pge="clr-namespace:LagoVista.AppLoader.Common"
+                    xmlns:local="clr-namespace:LagoVista.AppLoader.Resources">
     <Color x:Key="TitleBarBackground">#333</Color>
     <Color x:Key="TitleBarText">#CCC</Color>
 
@@ -11,7 +12,7 @@
     <Color x:Key="PageText"  >#CCC</Color>
     <Color x:Key="PageTextHighlighted">#FFF</Color>
     <Color x:Key="NavIconColor">#AAA</Color>
-    
+
     <Color x:Key="InvalidColor">#F00</Color>
     <Color x:Key="DangerColor">#F00</Color>
     <Color x:Key="LabelText" >#CCC</Color>
@@ -20,8 +21,6 @@
     <Color x:Key="LinkActive">#D48D17</Color>
     <Color x:Key="LinkDisabled">#888</Color>
 
-    <Color x:Key="ControlMouseOverColor">Red</Color>
-    
     <Color x:Key="EditControlFrameInvalid" >#F00</Color>
 
     <Color x:Key="EditControlBackground" >#777</Color>
@@ -33,17 +32,18 @@
     <Color x:Key="EditControlBackgroundActive" >#999</Color>
     <Color x:Key="EditControlTextActive" >#EEE</Color>
     <Color x:Key="EditControlPlaceHolderActive" >#CCC</Color>
-   
+
     <Color x:Key="EditControlBackgroundFocus" >#EEE</Color>
     <Color x:Key="EditControlTextFocus" >#333</Color>
     <Color x:Key="EditControlPlaceholderFocus">#888</Color>
     <Color x:Key="EditControlFrameFocus" >#333</Color>
-   
+
     <Color x:Key="EditControlFrameDisabled" >#575757</Color>
     <Color x:Key="EditControlBackgroundDisabled" >#575757</Color>
     <Color x:Key="EditControlTextDisabled" >#575757</Color>
     <Color x:Key="EditControlPlaceHolderDisabled" >#575757</Color>
-    
+
+
     <Color x:Key="MenuBarBackground" >#333</Color>
     <Color x:Key="MenuBarForeground" >#CCC</Color>
     <Color x:Key="MenuBarTitle" >#AAA</Color>
@@ -80,5 +80,45 @@
     <Color x:Key="SystemControlHighlightBaseMedium">Purple</Color>
     <Color x:Key="SystemControlBackgroundAltMedium">Green</Color>
     <Color x:Key="SystemControlForeground">Red</Color>
-    
+
+    <Style TargetType="pge:LagoVistaPage">
+        <Setter Property="Background" >
+            <Setter.Value>
+                <SolidColorBrush Color="{DynamicResource PageBackground}"/>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style TargetType="ListView">
+        <Setter Property="Background" >
+            <Setter.Value>
+                <SolidColorBrush Color="{DynamicResource PageBackground}"/>
+            </Setter.Value>
+        </Setter>
+        <Setter Property="BorderBrush" >
+            <Setter.Value>
+                <SolidColorBrush Color="{DynamicResource PageBackground}"/>
+            </Setter.Value>
+        </Setter>
+    </Style>
+ 
+    <Style TargetType="TextBlock">
+        <Setter Property="Foreground">
+            <Setter.Value>
+                <SolidColorBrush Color="{DynamicResource PageText}"/>
+            </Setter.Value>
+        </Setter>
+    </Style>
+    <Style TargetType="ctl:Icon">
+        <Setter Property="Background">
+            <Setter.Value>
+                <SolidColorBrush Color="{DynamicResource PageBackground}"/>
+            </Setter.Value>
+        </Setter>
+        <Setter Property="Foreground">
+            <Setter.Value>
+                <SolidColorBrush Color="{DynamicResource HighlightColor}"/>
+            </Setter.Value>
+        </Setter>
+    </Style>
 </ResourceDictionary>
