--- a/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample.UWP/Resources/Theme.Dark.xaml
+++ b/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample.UWP/Resources/Theme.Dark.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Color x:Key="TitleBarBackground">#333</Color>
+    <!--<Color x:Key="TitleBarBackground">#333</Color>
     <Color x:Key="TitleBarText">#CCC</Color>
 
     <Color x:Key="HighlightColor" >#D48D17</Color>
@@ -14,23 +14,26 @@
     <Color x:Key="InvalidColor">#F00</Color>
     <Color x:Key="DangerColor">#F00</Color>
     <Color x:Key="LabelText" >#CCC</Color>
-
+    
     <Color x:Key="LinkColor">#D48D17</Color>
     <Color x:Key="LinkActive">#D48D17</Color>
     <Color x:Key="LinkDisabled">#888</Color>
-
     <Color x:Key="EditControlFrameInvalid" >#F00</Color>
 
     <Color x:Key="EditControlBackground" >#777</Color>
+
     <Color x:Key="EditControlText" >#EEE</Color>
     <Color x:Key="EditControlPlaceholder" >#CCC</Color>
     <Color x:Key="EditControlFrame" >#555</Color>
 
+-->
     <Color x:Key="EditControlBorderIsActive" >#999</Color>
     <Color x:Key="EditControlBackgroundActive" >#999</Color>
     <Color x:Key="EditControlTextActive" >#EEE</Color>
     <Color x:Key="EditControlPlaceHolderActive" >#CCC</Color>
-
+    <!--
+ 
+   
     <Color x:Key="EditControlBackgroundFocus" >#EEE</Color>
     <Color x:Key="EditControlTextFocus" >#333</Color>
     <Color x:Key="EditControlPlaceholderFocus">#888</Color>
@@ -40,7 +43,6 @@
     <Color x:Key="EditControlBackgroundDisabled" >#575757</Color>
     <Color x:Key="EditControlTextDisabled" >#575757</Color>
     <Color x:Key="EditControlPlaceHolderDisabled" >#575757</Color>
-
     <Color x:Key="MenuBarBackground" >#333</Color>
     <Color x:Key="MenuBarForeground" >#CCC</Color>
     <Color x:Key="MenuBarTitle" >#AAA</Color>
@@ -79,5 +81,5 @@
     <Color x:Key="SystemControlForeground">Red</Color>
 
     <SolidColorBrush x:Key="TextControlForeground" Color="{StaticResource HighlightColor}" />
-    <SolidColorBrush x:Key="TextControlForegroundFocused" Color="{StaticResource HighlightColor}" />
+    <SolidColorBrush x:Key="TextControlForegroundFocused" Color="{StaticResource HighlightColor}" />-->
 </ResourceDictionary>
