--- a/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample.UWP/App.xaml
+++ b/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample.UWP/App.xaml
@@ -2,8 +2,7 @@
     x:Class="LagoVista.XPlat.Sample.UWP.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:LagoVista.XPlat.Sample.UWP"
-    RequestedTheme="Light">
+    xmlns:local="using:LagoVista.XPlat.Sample.UWP">
     <Application.Resources>
      <!--   <ResourceDictionary>
             <ResourceDictionary.ThemeDictionaries>
