--- a/src/LagoVista.XPlat.Core/Views/DeviceAccess/DevicesView.xaml
+++ b/src/LagoVista.XPlat.Core/Views/DeviceAccess/DevicesView.xaml
@@ -15,7 +15,7 @@
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
 
-            <pge:Entry FontSize="Large" Margin="10" TextChangedCommand="{Binding SearchNowCommand}" Placeholder="{trs:ClientTranslate DevicesView_SearchWatermark}" TextClearedCommand="{Binding FilterClearedCommand}" />
+            <pge:Entry FontSize="Medium" Margin="10" TextChangedCommand="{Binding SearchNowCommand}" Placeholder="{trs:ClientTranslate DevicesView_SearchWatermark}" TextClearedCommand="{Binding FilterClearedCommand}" />
 
             <StackLayout IsVisible="{Binding IsListEmpty}" Margin="20,50,20,0" Grid.Row="1" >
                 <Label Text="{trs:ClientTranslate DevicesView_NoDevice}" FontSize="Large"  />
