--- a/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample/App.xaml
+++ b/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample/App.xaml
@@ -6,7 +6,7 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Resources/Fonts.xaml" />
-                <ResourceDictionary Source="Resources/Theme.Dark.xaml" />
+                <ResourceDictionary Source="Resources/ThemeResources.xaml" />
                 <ResourceDictionary Source="Resources/CommonResources.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
