--- a/src/LagoVista.XPlat.Core/Views/DeviceAccess/PairBTDeviceView.xaml
+++ b/src/LagoVista.XPlat.Core/Views/DeviceAccess/PairBTDeviceView.xaml
@@ -4,6 +4,8 @@
     xmlns:trs="clr-namespace:LagoVista.XPlat.Core.Extensions;assembly=LagoVista.XPlat.Core"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:ctls="clr-namespace:LagoVista.XPlat.Core.Controls.Common;assembly=LagoVista.XPlat.Core"
+    LeftMenu="Back"
+    Title="Pair Blueooth Device"
     x:Class="LagoVista.XPlat.Core.Views.DeviceAccess.PairBTDeviceView">
     <pge:LagoVistaContentPage.MainContent>
         <Grid>
