Final updates before QA.

--- a/src/LagoVista.Kiosk.App/LagoVista.Kiosk.App/Views/KioskViewerView.xaml
+++ b/src/LagoVista.Kiosk.App/LagoVista.Kiosk.App/Views/KioskViewerView.xaml
@@ -8,6 +8,6 @@
         LeftMenu="Menu"
         x:Class="LagoVista.Kiosk.App.Views.KioskViewerView">
 	<pge:LagoVistaContentPage.MainContent>
-		<WebView Source="{Binding Url}"></WebView>
+		<WebView x:Name="KioskViewer" Source="{Binding Url}"></WebView>		
 	</pge:LagoVistaContentPage.MainContent>
 </pge:LagoVistaContentPage>
