--- a/src/LagoVista.XPlat.Core/Views/DeviceAccess/DevicesView.xaml
+++ b/src/LagoVista.XPlat.Core/Views/DeviceAccess/DevicesView.xaml
@@ -7,6 +7,7 @@
             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
             xmlns:ctls="clr-namespace:LagoVista.XPlat.Core.Controls.Common;assembly=LagoVista.XPlat.Core"
             x:Class="LagoVista.XPlat.Core.Views.DeviceAccess.DevicesView"
+    
             Title="{trs:ClientTranslate DevicesView_Title}" >
     <pge:LagoVistaContentPage.MainContent>
         <Grid>
@@ -20,8 +21,8 @@
             <StackLayout IsVisible="{Binding IsListEmpty}" Margin="20,50,20,0" Grid.Row="1" >
                 <Label Text="{trs:ClientTranslate DevicesView_NoDevice}" FontSize="Large"  />
             </StackLayout>
-     
-            <ListView ItemsSource="{Binding ListItems}" HasUnevenRows="True" SelectedItem="{Binding SelectedItem, Mode=TwoWay}"
+
+            <ListView ItemsSource="{Binding GattConnection.DiscoveredDevices}" HasUnevenRows="True" SelectedItem="{Binding SelectedDevice, Mode=TwoWay}"
                        IsVisible="{Binding ListHasData}" Grid.Row="1" >
                 <ListView.ItemTemplate>
                     <DataTemplate>
