--- a/Apps/seawolf/SeaWolf/App.xaml
+++ b/Apps/seawolf/SeaWolf/App.xaml
@@ -16,7 +16,7 @@
             <lclcvt:NotNullVisibilityConverter x:Key="NotNullVisibilityConverter" />
             <lclcvt:NullVisibilityConverter x:Key="NullVisibilityConverter" />
 
-            <Color x:Key="NuvIoTContrast">#FFD48D17</Color>
+         <!--   <Color x:Key="NuvIoTContrast">#FFD48D17</Color>
             <Color x:Key="PageBackground">#2E533D</Color>
             <Color x:Key="NuvIoTDark">#1976D2</Color>
             <Color x:Key="NuvIoTLight">#BBDEFB</Color>
@@ -24,7 +24,7 @@
             <Color x:Key="NuvIoTBlack">#171717</Color>
             <Color x:Key="NuvIoTWhite">#F3F3F3</Color>
             <Color x:Key="MenuBarBackground">#2E353D</Color>
-            <Color x:Key="MenuBarForeground">#F3F3F3</Color>
+            <Color x:Key="MenuBarForeground">#F3F3F3</Color>-->
             <Style TargetType="Label" x:Key="SectionLabel" >
                 <Setter Property="FontAttributes"  Value="Bold" />
                 <Setter Property="Margin" Value="10,10,0,0" />
