--- a/Apps/seawolf/SeaWolf/Views/MainView.xaml
+++ b/Apps/seawolf/SeaWolf/Views/MainView.xaml
@@ -37,169 +37,42 @@
                 <ScrollView>
                     <Grid>
                         <Grid.RowDefinitions>
-                            <RowDefinition Height="300" />
-                            <RowDefinition Height="4" />
+                            <RowDefinition Height="48"/>
                             <RowDefinition Height="*" />
                         </Grid.RowDefinitions>
-                        <Grid>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="48"/>
-                                <RowDefinition Height="*" />
-                            </Grid.RowDefinitions>
-                            <Label Text="Current Location" FontAttributes="Bold"  HorizontalOptions="Center" FontSize="32"/>
-                            <pge:BindableMap Grid.Row="1" MapType="Street" MapCenter="{Binding CurrentVeseelLocation}" />
-                        </Grid>
-                        
-                        <Line Grid.Row="1" BackgroundColor="Black" />
-
-                        <Grid Grid.Row="2">
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="48"/>
-                                <RowDefinition Height="*" />
-                            </Grid.RowDefinitions>
-                            <Label Text="Voltage Monitoring" FontAttributes="Bold"  HorizontalOptions="Center" FontSize="32"/>
-                            <flv:FlowListView FlowItemsSource="{Binding Sensors}" Grid.Row="1" FlowColumnCount="3">
-                                <flv:FlowListView.FlowColumnTemplate>
-                                    <DataTemplate>
-                                        <ctl:CardView CardDescription="{Binding Config.Name}" IconKey="{Binding SensorType.IconKey}" CardValue="{Binding Value}" />
-                                    </DataTemplate>
-                                </flv:FlowListView.FlowColumnTemplate>
-                            </flv:FlowListView>
-                        </Grid>
+                        <Label Text="Voltage Monitoring" FontAttributes="Bold"  HorizontalOptions="Center" FontSize="32"/>
+                        <flv:FlowListView FlowItemsSource="{Binding Sensors}" Grid.Row="1" FlowColumnCount="2">
+                            <flv:FlowListView.FlowColumnTemplate>
+                                <DataTemplate>
+                                    <ctl:CardView CardDescription="{Binding Config.Name}" IconKey="{Binding SensorType.IconKey}" CardValue="{Binding Value}" />
+                                </DataTemplate>
+                            </flv:FlowListView.FlowColumnTemplate>
+                        </flv:FlowListView>
                     </Grid>
                 </ScrollView>
-            </pge:TabContent>
-            <pge:TabContent BackgroundColor="White">
-
             </pge:TabContent>
             <pge:TabContent BackgroundColor="White">
                 <ScrollView>
-                    <Grid >
+                    <Grid>
                         <Grid.RowDefinitions>
-                            <RowDefinition Height="300" />
-                            <RowDefinition Height="4" />
-                            <RowDefinition Height="300" />
-                            <RowDefinition Height="4" />
-                            <RowDefinition Height="300" />
-                            <RowDefinition Height="4" />
+                            <RowDefinition Height="*" />
                         </Grid.RowDefinitions>
-                        <Grid>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="48"/>
-                                <RowDefinition Height="*" />
-                            </Grid.RowDefinitions>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="200" />
-                                <ColumnDefinition Width="*" />
-                            </Grid.ColumnDefinitions>
-                            <Label Text="Geo Fence" FontAttributes="Bold"  HorizontalOptions="Center" FontSize="32" Grid.ColumnSpan="2"/>
-                            <pge:BindableMap Grid.Row="1" MapType="Street" MapCenter="{Binding CurrentGeoFenceCenter}" 
-                                             MapTappedCommand="{Binding MapTappedCommand}"
-                                             Grid.Column="1" />
-                        </Grid>
-
-                        <Line Grid.Row="1" BackgroundColor="Black" />
-
-                        <Grid Grid.Row="2">
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="64" />
-                                <RowDefinition Height="*" />
-                            </Grid.RowDefinitions>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="300" />
-                                <ColumnDefinition Width="*" />
-                            </Grid.ColumnDefinitions>
-                            <Label Text="Voltage Monitoring" FontAttributes="Bold" Grid.ColumnSpan="2"  HorizontalOptions="Center" FontSize="32"/>
-                            <ListView ItemsSource="{Binding BatterySensors}" SelectedItem="{Binding BatterySensor, Mode=TwoWay}" Grid.Row="1"  >
-                                <ListView.ItemTemplate>
-                                    <DataTemplate>
-                                        <ViewCell>
-                                            <Label FontSize="24" HorizontalOptions="Fill" VerticalOptions="Fill"  HorizontalTextAlignment="Center" XAlign="Center" YAlign="Center" Text="{Binding Text}"/>
-                                        </ViewCell>
-                                    </DataTemplate>
-                                </ListView.ItemTemplate>
-                            </ListView>
-                            <Grid Grid.Column="1" Grid.Row="1" IsVisible="{Binding BatterySensor, Converter={StaticResource NotNullVisibilityConverter}}">
-                                <Grid.RowDefinitions>
-                                    <RowDefinition Height="48" />
-                                    <RowDefinition Height="*" />
-                                    <RowDefinition Height="*" />
-                                </Grid.RowDefinitions>
-
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="48" />
-                                    <ColumnDefinition Width="92" />
-                                    <ColumnDefinition Width="*" />
-                                    <ColumnDefinition Width="92" />
-                                    <ColumnDefinition Width="48" />
-                                    <ColumnDefinition Width="64" />
-                                </Grid.ColumnDefinitions>
-                                <Label Text="{Binding BatterySensor.Text}" HorizontalOptions="Center"  FontSize="24" TextColor="Black" Grid.ColumnSpan="5" />
-                                <pge:IconButton IconKey="fa-arrow-up" Grid.Row="1" FontSize="32" Grid.Column="0" Command="{Binding IncrementHighBatteryThresholdCommand}"/>
-                                <pge:IconButton IconKey="fa-arrow-down" Grid.Row="2"  FontSize="32" Grid.Column="0" Command="{Binding DecrementLowBatteryThresholdCommand}"/>
-                                <Label Text="{Binding LowBatteryTolerance, StringFormat='{0:F1}'}"  VerticalOptions="Center" HorizontalOptions="Center" Grid.Column="1" FontSize="32" TextColor="Blue" Grid.RowSpan="2" Grid.Row="1" />
-                                <Label Text="{Binding HighBatteryTolerance, StringFormat='{0:F1}'}" VerticalOptions="Center" HorizontalOptions="Center" Grid.Column="3" FontSize="32" TextColor="Red" Grid.RowSpan="2" Grid.Row="1" />
-                                <pge:IconButton HorizontalOptions="Center" IconKey="fa-arrow-up" Grid.Row="1" Grid.Column="4" FontSize="32" Command="{Binding IncrementHighBatteryThresholdCommand}"/>
-                                <pge:IconButton HorizontalOptions="Center" IconKey="fa-arrow-down"  Grid.Row="2" Grid.Column="4" FontSize="32" Command="{Binding DecrementHighBatteryThresholdCommand}"/>
-                            </Grid>
-                        </Grid>
-
-                        <Line Grid.Row="3" BackgroundColor="Black" />
-
-                        <Grid Grid.Row="4">
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="64" />
-                                <RowDefinition Height="*" />
-                            </Grid.RowDefinitions>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="300" />
-                                <ColumnDefinition Width="*" />
-                            </Grid.ColumnDefinitions>
-                            <Label Text="Temperature Monitoring" FontAttributes="Bold" Grid.ColumnSpan="2"  HorizontalOptions="Center" FontSize="32"/>
-                            <ListView ItemsSource="{Binding TemperatureSensors}" SelectedItem="{Binding TemperatureSensor, Mode=TwoWay}" Grid.Row="1"  >
-                                <ListView.ItemTemplate>
-                                    <DataTemplate>
-                                        <ViewCell>
-                                            <Label FontSize="24" HorizontalOptions="Fill" VerticalOptions="Fill"  HorizontalTextAlignment="Center" XAlign="Center" YAlign="Center" Text="{Binding Text}"/>
-                                        </ViewCell>
-                                    </DataTemplate>
-                                </ListView.ItemTemplate>
-                            </ListView>
-                            <Grid Grid.Column="1" Grid.Row="1" IsVisible="{Binding TemperatureSensor, Converter={StaticResource NotNullVisibilityConverter}}">
-                                <Grid.RowDefinitions>
-                                    <RowDefinition Height="48" />
-                                    <RowDefinition Height="*" />
-                                    <RowDefinition Height="*" />
-                                </Grid.RowDefinitions>
-
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="48" />
-                                    <ColumnDefinition Width="92" />
-                                    <ColumnDefinition Width="*" />
-                                    <ColumnDefinition Width="92" />
-                                    <ColumnDefinition Width="48" />
-                                    <ColumnDefinition Width="64" />
-                                </Grid.ColumnDefinitions>
-                                <Label Text="{Binding TemperatureSensor.Text}" HorizontalOptions="Center"  FontSize="24" TextColor="Black" Grid.ColumnSpan="5" />
-                                <pge:IconButton IconKey="fa-arrow-up" Grid.Row="1" FontSize="32" Grid.Column="0" Command="{Binding IncrementLowTemperatureThresholdCommand}"/>
-                                <pge:IconButton IconKey="fa-arrow-down" Grid.Row="2"  FontSize="32" Grid.Column="0" Command="{Binding DecrementLowTemperatureThresholdCommand}"/>
-                                <Label Text="{Binding LowTemperatureTolerance, StringFormat='{0:F1}'}"  VerticalOptions="Center" HorizontalOptions="Center" Grid.Column="1" FontSize="32" TextColor="Blue" Grid.RowSpan="2" Grid.Row="1" />
-                                <Label Text="{Binding HighTemperatureTolerance, StringFormat='{0:F1}'}" VerticalOptions="Center" HorizontalOptions="Center" Grid.Column="3" FontSize="32" TextColor="Red" Grid.RowSpan="2" Grid.Row="1" />
-                                <pge:IconButton HorizontalOptions="Center" IconKey="fa-arrow-up" Grid.Row="1" Grid.Column="4" FontSize="32" Command="{Binding IncrementHighTemperatureThresholdCommand}"/>
-                                <pge:IconButton HorizontalOptions="Center" IconKey="fa-arrow-down"  Grid.Row="2" Grid.Column="4" FontSize="32" Command="{Binding DecrementHighTemperatureThresholdCommand}"/>
-                            </Grid>
-                        </Grid>
-                        <Line Grid.Row="5" BackgroundColor="Black" ></Line>
+                        <pge:BindableMap MapType="Street" MapCenter="{Binding CurrentVeseelLocation}" />
                     </Grid>
                 </ScrollView>
+            </pge:TabContent>
+
+
+            <pge:TabContent BackgroundColor="White">
+
             </pge:TabContent>
         </pge:TabContentHolder>
     </pge:LagoVistaContentPage.TabbedContent>
     <pge:LagoVistaContentPage.TabBar  >
         <pge:TabBar IsVisible="{Binding CurrentDevice, Converter={StaticResource NotNullVisibilityConverter}}">
             <pge:Tab Label="Home" Icon="fa-home" />
+            <pge:Tab Label="Map" Icon="fa-home" />
             <pge:Tab Label="Alerts" Icon="fa-bell" />
-            <pge:Tab Label="Settings" Icon="fa-gear" />
         </pge:TabBar>
     </pge:LagoVistaContentPage.TabBar>
 </pge:LagoVistaContentPage >
